# battleship

./: CMakeLists.txt  Doxyfile  main.cpp
backend/: CMakeLists.txt
backend/include/: field.h  game.h  ship.h
backend/src/: field.cpp  game.cpp  ship.cpp
frontend/: CMakeLists.txt
frontend/include/: clock.h  fieldwidget.h  mainwindow.h
frontend/src/: clock.cpp  fieldwidget.cpp  mainwindow.cpp
